# pythonmonoreponx

./: .gitignore  README.md  nx.json  package-lock.json  package.json  pymonorepo.code-workspace  pyproject.toml  tsconfig.base.json
.github/workflows/: cicd.yaml  deploy.yml
backend/domain/: README.md  project.json  pyproject.toml
backend/domain/app_domain/: py.typed
backend/domain/app_domain/entities/: product.py
backend/domain/app_domain/repositories/: __init__.py  product_repository.py
backend/domain/app_domain/usecases/: __init__.py  get_products_usecase.py
backend/domain/src/: hello.py
backend/domain/tests/: conftest.py  test_hello.py
backend/platform/: project.json  pyproject.toml
backend/platform/app_platform/repositories/: __init__.py  product_repository_impl.py
backend/platform/tests/: test_hello.py
backend/service/: README.md  pyproject.toml
backend/service/src/: hello.py
backend/service/tests/: test_hello.py
backend/web/: README.md  project.json  pyproject.toml
backend/web/src/: hello.py  main.py
backend/web/tests/: conftest.py  test_hello.py
frontend/: project.json  vite.config.ts
frontend-shared/: README.md  package.json  project.json  vite.config.ts
frontend-shared/src/lib/: frontend-shared.spec.ts  frontend-shared.ts
